// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should ask for dates of reservation when no data provided. 1`] = `
<div
  className="wrapper"
>
  <Header
    currency="$"
    price={19.9}
    rating={3.5}
    reviews={123}
  />
  <Calendar
    dateMissing={false}
    dateNotMissing={[Function]}
    minStay={2}
    setStayLength={[Function]}
  />
  <Costs
    amount={0}
    bonus={10}
    cleaningFee={10}
    currency="$"
    price={19.9}
    serviceFee={0}
    stayLength={0}
    total={0}
  />
  <button
    className="button__reservation"
    onClick={[Function]}
  >
    Request to Book
  </button>
</div>
`;

exports[`Should ask for dates of reservation when no data provided. 2`] = `
<div
  className="wrapper"
>
  <Header
    currency="$"
    price={19.9}
    rating={3.5}
    reviews={123}
  />
  <Calendar
    dateMissing={true}
    dateNotMissing={[Function]}
    minStay={2}
    setStayLength={[Function]}
  />
  <Costs
    amount={0}
    bonus={10}
    cleaningFee={10}
    currency="$"
    price={19.9}
    serviceFee={0}
    stayLength={0}
    total={0}
  />
  <button
    className="button__reservation"
    onClick={[Function]}
  >
    Request to Book
  </button>
</div>
`;
